tests/algorithms/x/C/maths/numerical_analysis/runge_kutta_fehlberg_45.c
// Generated by Mochi 0.10.32 on 2025-08-17 12:29 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>
#include <math.h>

size_t runge_kutta_fehlberg_45_len;

size_t append_len;
static double* list_append_double(double *arr, size_t *len, double val) {
    arr = realloc(arr, (*len + 1) * sizeof(double));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

double * runge_kutta_fehlberg_45(double(*func)(double, double), double x_initial, double y_initial, double step_size, double x_final);
void user_main();
double _f1_0(double x, double y);
int main(void);

double * runge_kutta_fehlberg_45(double(*func)(double, double), double x_initial, double y_initial, double step_size, double x_final) {
    if (x_initial >= x_final) {
        panic("The final value of x must be greater than initial value of x.");
    }
    if (step_size <= 0.0) {
        panic("Step size must be positive.");
    }
    long long n = (x_final - x_initial) / step_size;
    double *ys = NULL;
    size_t ys_len = 0;
    double x = x_initial;
    double y = y_initial;
    ys = list_append_double(ys, &ys_len, y);
    long long i = 0LL;
    while (i < n) {
        double k1 = step_size * func(x, y);
        double k2 = step_size * func(x + (step_size / 4.0), y + (k1 / 4.0));
        double k3 = step_size * func(x + ((3.0 / 8.0) * step_size), (y + ((3.0 / 32.0) * k1)) + ((9.0 / 32.0) * k2));
        double k4 = step_size * func(x + ((12.0 / 13.0) * step_size), ((y + ((1932.0 / 2197.0) * k1)) - ((7200.0 / 2197.0) * k2)) + ((7296.0 / 2197.0) * k3));
        double k5 = step_size * func(x + step_size, (((y + ((439.0 / 216.0) * k1)) - (8.0 * k2)) + ((3680.0 / 513.0) * k3)) - ((845.0 / 4104.0) * k4));
        double k6 = step_size * func(x + (step_size / 2.0), ((((y - ((8.0 / 27.0) * k1)) + (2.0 * k2)) - ((3544.0 / 2565.0) * k3)) + ((1859.0 / 4104.0) * k4)) - ((11.0 / 40.0) * k5));
        y = ((((y + ((16.0 / 135.0) * k1)) + ((6656.0 / 12825.0) * k3)) + ((28561.0 / 56430.0) * k4)) - ((9.0 / 50.0) * k5)) + ((2.0 / 55.0) * k6);
        x = x + step_size;
        ys = list_append_double(ys, &ys_len, y);
        i = i + 1LL;
    }
    return runge_kutta_fehlberg_45_len = ys_len, ys;
}

void user_main() {
    double *y1 = runge_kutta_fehlberg_45(_f1_0, 0.0, 0.0, 0.2, 1.0);
    size_t y1_len = runge_kutta_fehlberg_45_len;
    printf("%g\n", y1[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? y1_len + _mochi_idx : _mochi_idx;})]);
    double *y2 = runge_kutta_fehlberg_45(f2, -1.0, 0.0, 0.2, 0.0);
    size_t y2_len = runge_kutta_fehlberg_45_len;
    printf("%g\n", y2[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? y2_len + _mochi_idx : _mochi_idx;})]);
}

double _f1_0(double x, double y) {
    return 1.0 + (y * y);
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
